# libkafka

./: Cargo.toml  Makefile  README.md
.github/workflows/: create_release.yaml
src/: consumer.rs  error.rs  kafka.rs  lib.rs  producer.rs  python.rs  runtime.rs  utils.rs
src/kafka/: consumer.rs  producer.rs
tests/: lib_kafka_test.rs  python_test.py
