[package]
name = "libkafka"
version = "0.1.0"
authors = ["grumbach <anselmega@gmail.com>"]
edition = "2021"

[lib]
name = "kafka"
crate-type = ["lib"]

[dependencies]
rdkafka = { version = "0.28.*", features = ["cmake-build", "libz"], default-features = false }
thiserror = "1.0.*"
log = "0.4.*"
futures-util= "0.3.*"
anyhow = { version = "1.0.*", optional = true}

[dev-dependencies]
tokio = { version = "1.24", features = ["macros", "rt"]}
rand = "0.8"

[features]
kafka_debug = []
async = ["rdkafka/tokio"]
anyhow = ["dep:anyhow"]
