[package]
name = "libkafka"
version = "0.2.4"
authors = ["Nicolas HAQUET <nicolas.haquet@w6d.io>"]
edition = "2021"

[lib]
name = "kafka"
crate-type = ["lib"]

[dependencies]
rdkafka = { version = "0.36.*", features = ["cmake-build", "libz"], default-features = false }
openssl = { version = "0.10.66", features = ["vendored"] }
thiserror = "1.0.*"
log = "0.4.*"
futures-util= "0.3.*"
anyhow = { version = "1.0.*", optional = true}

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt"]}
rand = "0.8"

[features]
kafka_debug = []
async = ["rdkafka/tokio"]
anyhow = ["dep:anyhow"]
